# django_qp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
benchmarks/: Dockerfile  __init__.py  benchmark.py  docker-compose.yml  models.py  plot.py  requirements.txt
src/dj_pydantic_qparams/: __init__.py  core.py  decorators.py  exceptions.py  mixins.py  typing.py
src/django_qp/: __init__.py  _compat.py  core.py  decorators.py  exceptions.py  internal_typing.py  mixins.py
src/django_qp/backends/: __init__.py  msgspec_backend.py  pydantic_backend.py
tests/: conftest.py  settings.py  test_async_decorator.py  test_async_mixin.py  test_backends.py  test_core.py  test_msgspec_views.py  test_urls.py  test_views.py
